# bukzor.garden

./: .envrc  .gitignore  Brewfile  CLAUDE.md  Cargo.toml  HACKING.md  package.json
.claude/: todo.md
.claude/todo.kb/: 2026-02-03-000-trunk-to-buck2-migration.md  2026-02-05-000-deploy-cloudflare-pages.md
apps/: README.md
apps/super-tictactoe/: CLAUDE.md  Cargo.toml  index.html  style.css
apps/super-tictactoe/.claude/: todo.md
apps/super-tictactoe/.claude/todo.kb/: 2026-02-04-000-refactor-object-model-board-game-ui-app.md
apps/super-tictactoe/docs/: bukzor-llc
apps/super-tictactoe/docs/dev/adr/: 2026-02-03-000-htmlcss-rendering-for-super-tic-tac-toe.md
apps/super-tictactoe/docs/dev/devlog/: 2026-02-03-000-v0-milestones.md  2026-02-05-000-deploy-planning-and-technical-principles.md
apps/super-tictactoe/src/: lib.rs
docs/: private.bukzor-llc
docs/dev/adr/: 2026-02-05-000-corepack-over-volta-for-pnpm-management.md
docs/dev/devlog/: 2026-02-05-000-deploy-planning-and-technical-principles.md  2026-02-05-001-pnpm-and-wrangler-bootstrapping.md
ops/: README.md
