[package]
name = "super-tictactoe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-events = "0.2"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = [
    "console",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "Node",
] }
